# deployed-flare

./: .gitignore  README.md  VTPM_INTEGRATION_GUIDE.md  deployed_readme.md  foundry.toml
.github/workflows/: build_and_test.yml  slither_analysis.yml
broadcast/FlareVtpmAttestation.s.sol/114/: run-latest.json
broadcast/FlareVtpmAttestation.s.sol/14/: run-1741903623.json  run-1741921284.json
contracts/: FlareVtpmAttestation.sol
contracts/interfaces/: IAttestation.sol  IVerification.sol
contracts/types/: Common.sol  OidcStructs.sol
contracts/utils/: ParserUtils.sol
contracts/verifiers/: OidcSignatureVerification.sol
py/: .gitignore  get_token.py  jwks.py  pki_attestation_validation.py  prepare_inputs.py  pyproject.toml
py/data/: pki.txt  root_cert.pem
script/: DeployFlareVtpm.sol  FlareVtpmAttestation.s.sol
src/: FlareVtpmAttestation.sol
src/interfaces/: IAttestation.sol  ITokenType.sol
src/types/: Common.sol  OidcStructs.sol  VtpmStructs.sol
src/verifiers/: OidcSignatureVerification.sol
test/: FlareVtpmAttestation.t.sol
